2007-10-31  John Franks <jrfranks@zmanda.com> (merged by dustin@zmanda.com)
	* most C files, amanda.h: Switch to using the g_printf family, which
	  supports a consistent set of %-conversions, including the 'z'
	  (size_t) and 'j' (intmax_t) size specifiers.  Convert various
	  printf format strings accordingly.

2007-10-30  Dustin J. Mitchell <dustin@zmanda.com>
	* docs autogen INSTALL UPGRADING configure.in 
	  DEVELOPING Makefile.am: remove docs/ directory in favor of
	  manpages and online reference; most docs/* were outdated

2007-10-29  Dustin J. Mitchell <dustin@zmanda.com>
	* changer-src/chg-zd-mtx.sh: fix typo

2007-10-29  Ian Turner <ian@zmanda.com>
	* restore-src/restore.c: Don't mention slot numbers when running
	  without a changer.

2007-10-29  Ian Turner <ian@zmanda.com>
	* man/xml-source/amfetchdump.8.xml: Remove documentation for
	  amfetchdump -i.

2007-10-26  Dustin J. Mitchell <dustin@zmanda.com>
	Add support for post-install tests, which can be more thorough than
	unit tests.
	* configure.in Makefile.am installcheck/*: new directory
	* installcheck/amgetconf.pl: test some of amgetconf's functionality
	* docs/developing.txt: notes on various test mechanisms
	* config/automake/scripts.am: add CHECK_PERL_FLAGS
	* common-src/debug.c: only try to chown debug files if running as root

2007-10-25  Dustin J. Mitchell <dustin@zmanda.com>
	* config/mkinstalldirs config/depcomp config/config.guess
	  config/ltmain.sh config/config.sub config/missing
	  config/install-sh config/ylwrap: update files with automake-1.10, 
	  libtool-1.5.24
	* autogen: don't call automake with --add-missing, as it stomps all
	  over the working copy

2007-10-25  Dustin J. Mitchell <dustin@zmanda.com>
	* gnulib/* config/*: updated to latest gnulib
	* gnulib/regenerate/regenerate: update gnulib date
	* gnulib/regenerate/getaddrinfo-cygwin.patch: update to patch new
	  getaddrinfo.c
	* device-src/tests/vfs_test.c: mkdtemp.h no longer exists
